Adding bulk SchemeIds operations
